Customize scheduling booking states
